--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.3.61'
+    id 'com.github.johnrengelman.shadow' version '5.2.0'
+    id 'application'
 }
 
 group 'uk.me.cmh'
@@ -9,10 +11,18 @@ repositories {
     mavenCentral()
 }
 
+application {
+    mainClassName = 'uk.me.cmh.webappdemo.HelloWorldServerKt'
+}
+
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     implementation group: "org.http4k", name: "http4k-core", version: "3.205.0"
     implementation group: "org.http4k", name: "http4k-server-jetty", version: "3.205.0"
+}
+
+shadowJar {
+    mergeServiceFiles()
 }
 
 compileKotlin {
