--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,15 @@ plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.3.61'
     id 'com.github.johnrengelman.shadow' version '5.2.0'
     id 'application'
+    id "com.heroku.sdk.heroku-gradle" version "1.0.4"
 }
 
 group 'uk.me.cmh'
 version '1.0-SNAPSHOT'
+
+ext {
+    herokuProc = "web: 'java -jar build/libs/cmh-webapp-demo-$version-all.jar'"
+}
 
 repositories {
     mavenCentral()
@@ -15,6 +20,7 @@ application {
     mainClassName = 'uk.me.cmh.webappdemo.HelloWorldServerKt'
 }
 
+
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     implementation group: "org.http4k", name: "http4k-core", version: "3.205.0"
@@ -22,7 +28,15 @@ dependencies {
 }
 
 shadowJar {
+    archiveFileName = "cmh-webapp-demo.jar"
     mergeServiceFiles()
+}
+
+heroku {
+    appName = "cmh-webapp-demo"
+    processTypes(
+            web: "java -jar build/libs/cmh-webapp-demo.jar"
+    )
 }
 
 compileKotlin {
