--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,7 @@
 language: java
 jdk: openjdk8
-script: HEROKU_API_KEY="$HEROKU_API_KEY" gradle clean shadowJar deployHeroku
+jobs:
+  - stage: build
+    script: gradle shadowJar
+  - stage: deploy
+    script: HEROKU_API_KEY="$HEROKU_API_KEY" gradle deployHeroku
