--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: java
 jdk: openjdk8
 jobs:
+  - stage: build
+    script: gradle clean
   - stage: deploy
     script: HEROKU_API_KEY="$HEROKU_API_KEY" gradle deployHeroku
