--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,5 @@ language: java
 jdk: openjdk8
 jobs:
   - stage: deploy
+    install: echo "skip 'gradle assemble' step"
     script: HEROKU_API_KEY="$HEROKU_API_KEY" gradle deployHeroku
