--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,4 @@
 language: java
 jdk: openjdk8
-jobs:
-  - stage: deploy
-    install: echo "skip 'gradle assemble' step"
-    script: HEROKU_API_KEY="$HEROKU_API_KEY" gradle deployHeroku
+install: echo "skip 'gradle assemble' step"
+script: HEROKU_API_KEY="$HEROKU_API_KEY" gradle build deployHeroku
