--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,9 @@ language: java
 jdk: openjdk8
 install: echo "skip 'gradle assemble' step"
 script:
+  - echo "*** BUILDING ***"
   - gradle build
+  - echo "*** CREATING ARTIFACT ***"
+  - gradle shadowJar
+  - echo "*** DEPLOYING TO HEROKU ***"
   - HEROKU_API_KEY="$HEROKU_API_KEY" gradle deployHeroku
