--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,6 @@
 plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.3.61'
     id 'com.github.johnrengelman.shadow' version '5.2.0'
-    id 'application'
     id "com.heroku.sdk.heroku-gradle" version "1.0.4"
 }
 
@@ -15,21 +14,20 @@ ext {
 repositories {
     mavenCentral()
 }
-
-application {
-    mainClassName = 'uk.me.cmh.webappdemo.HelloWorldServerKt'
-}
-
-
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     implementation group: "org.http4k", name: "http4k-core", version: "3.205.0"
     implementation group: "org.http4k", name: "http4k-server-jetty", version: "3.205.0"
 }
 
+jar.enabled = false
+
 shadowJar {
     archiveFileName = "cmh-webapp-demo.jar"
     mergeServiceFiles()
+    manifest {
+        attributes 'Main-Class': "uk.me.cmh.webappdemo.HelloWorldServerKt"
+    }
 }
 
 heroku {
@@ -42,6 +40,7 @@ heroku {
 compileKotlin {
     kotlinOptions.jvmTarget = "1.8"
 }
+
 compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
 }
