--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     implementation group: "org.http4k", name: "http4k-core", version: "3.205.0"
     implementation group: "org.http4k", name: "http4k-server-jetty", version: "3.205.0"
+    testImplementation "junit:junit:4.12"
 }
 
 jar.enabled = false
