--- a/build.gradle
+++ b/build.gradle
@@ -1,39 +1,34 @@
 plugins {
-    id 'org.jetbrains.kotlin.jvm' version '1.3.61'
-    id 'com.github.johnrengelman.shadow' version '5.2.0'
+    id "org.jetbrains.kotlin.jvm" version "1.3.61" apply false
 }
 
 group 'uk.me.cmh'
 version '1.0-SNAPSHOT'
 
-repositories {
-    mavenCentral()
-}
+subprojects {
 
-dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    implementation group: "org.http4k", name: "http4k-core", version: "3.205.0"
-    implementation group: "org.http4k", name: "http4k-server-jetty", version: "3.205.0"
-    testImplementation "junit:junit:4.12"
-    testImplementation "com.natpryce:hamkrest:1.7.0.0"
-    testImplementation group: "org.http4k", name: "http4k-client-apache", version: "3.205.0"
-    testImplementation group: "org.http4k", name: "http4k-client-okhttp", version: "3.205.0"
-}
-
-jar.enabled = false
-
-shadowJar {
-    archiveFileName = "cmh-webapp-demo.jar"
-    mergeServiceFiles()
-    manifest {
-        attributes 'Main-Class': "uk.me.cmh.webappdemo.HelloServerKt"
+    repositories {
+        mavenCentral()
     }
-}
 
-compileKotlin {
-    kotlinOptions.jvmTarget = "1.8"
-}
+    apply plugin: "org.jetbrains.kotlin.jvm"
 
-compileTestKotlin {
-    kotlinOptions.jvmTarget = "1.8"
+    dependencies {
+        implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+        implementation group: "org.http4k", name: "http4k-core", version: "3.205.0"
+        implementation group: "org.http4k", name: "http4k-server-jetty", version: "3.205.0"
+        testImplementation "junit:junit:4.12"
+        testImplementation "com.natpryce:hamkrest:1.7.0.0"
+        testImplementation group: "org.http4k", name: "http4k-client-apache", version: "3.205.0"
+        testImplementation group: "org.http4k", name: "http4k-client-okhttp", version: "3.205.0"
+    }
+
+    compileKotlin {
+        kotlinOptions.jvmTarget = "1.8"
+    }
+
+    compileTestKotlin {
+        kotlinOptions.jvmTarget = "1.8"
+    }
+
 }
