Test logging added to gradle builds

--- a/webapp/build.gradle
+++ b/webapp/build.gradle
@@ -4,6 +4,13 @@ plugins {
 
 jar.enabled = false
 
+test {
+    testLogging {
+        events "passed", "skipped", "failed"
+        exceptionFormat "full"
+    }
+}
+
 shadowJar {
     archiveFileName = "cmh-webapp-demo.jar"
     mergeServiceFiles()
