--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ jobs:
         - heroku plugins:install java
         - heroku deploy:jar webapp/build/libs/cmh-webapp-demo.jar --app cmh-webapp-demo-staging
     - stage: test staging deployment
+      env:
+        - SMOKE_TEST_ENDPOINT="https://cmh-webapp-demo-staging.herokuapp.com"
       install: echo "skip 'gradle assemble' step"
       script:
         - ./gradlew :webapp-smoke-test:test
