Basic train data parsing test and implementation

--- a/webapp/build.gradle
+++ b/webapp/build.gradle
@@ -18,3 +18,7 @@ shadowJar {
         attributes 'Main-Class': "uk.me.cmh.webappdemo.HelloServerKt"
     }
 }
+
+dependencies {
+    implementation 'org.jsoup:jsoup:1.12.1'
+}
