--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,4 @@ rootProject.name = "cmh-webapp-demo"
 
 include "webapp"
 include "webapp-smoke-test"
-include "fake-service"
+include "fake-recent-train-times"
