--- a/fake-recent-train-times/build.gradle
+++ b/fake-recent-train-times/build.gradle
@@ -1,3 +1,25 @@
+plugins {
+    id 'com.github.johnrengelman.shadow' version '5.2.0'
+}
+
+jar.enabled = false
+
+test {
+    testLogging {
+        events "passed", "skipped", "failed"
+        exceptionFormat "full"
+    }
+}
+
+shadowJar {
+    archiveFileName = "cmh-fake-rtt.jar"
+    mergeServiceFiles()
+    manifest {
+        attributes 'Main-Class': "uk.me.cmh.webappdemo.FakeRecentTrainTimesServerKt"
+    }
+}
+
 dependencies {
+    implementation 'org.jsoup:jsoup:1.12.1'
     implementation group: "org.http4k", name: "http4k-template-handlebars", version: "3.206.0"
 }
