--- a/webapp/build.gradle
+++ b/webapp/build.gradle
@@ -15,7 +15,7 @@ shadowJar {
     archiveFileName = "cmh-webapp-demo.jar"
     mergeServiceFiles()
     manifest {
-        attributes 'Main-Class': "uk.me.cmh.webappdemo.HelloServerKt"
+        attributes 'Main-Class': "uk.me.cmh.traindelays.HelloServerKt"
     }
 }
 
