--- a/build.gradle
+++ b/build.gradle
@@ -17,10 +17,10 @@ subprojects {
         implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
         implementation group: "org.http4k", name: "http4k-core", version: "3.205.0"
         implementation group: "org.http4k", name: "http4k-server-jetty", version: "3.205.0"
+        implementation group: "org.http4k", name: "http4k-client-okhttp", version: "3.205.0"
         testImplementation "junit:junit:4.12"
         testImplementation "com.natpryce:hamkrest:1.7.0.0"
         testImplementation group: "org.http4k", name: "http4k-client-apache", version: "3.205.0"
-        testImplementation group: "org.http4k", name: "http4k-client-okhttp", version: "3.205.0"
     }
 
     compileKotlin {
