Moving all build configuration into Travis settings env variables

--- a/webapp-smoke-test/build.gradle
+++ b/webapp-smoke-test/build.gradle
@@ -3,4 +3,5 @@ test {
         events "passed", "skipped", "failed"
         exceptionFormat "full"
     }
+    systemProperty "smoketest.endpoint", System.getProperty("smoketest.endpoint")
 }
