--- a/.travis.yml
+++ b/.travis.yml
@@ -7,27 +7,20 @@ jobs:
       script:
         - gradle :fake-recent-train-times:build
         - gradle :fake-recent-train-times:shadowJar
-        - HEROKU_API_KEY="$HEROKU_API_KEY"
         - heroku plugins:install java
         - heroku deploy:jar fake-recent-train-times/build/libs/cmh-fake-rtt.jar --app cmh-fake-rtt
     - stage: "build and deploy to staging"
       script:
         - gradle :webapp:build
         - gradle :webapp:shadowJar
-        - HEROKU_API_KEY="$HEROKU_API_KEY"
         - heroku plugins:install java
         - heroku deploy:jar webapp/build/libs/cmh-train-delays.jar --app cmh-train-delays-staging
     - stage: "smoke test staging deployment"
-      env:
-        - SMOKE_TEST_ENDPOINT="https://cmh-train-delays-staging.herokuapp.com"
       script:
-        - gradle :webapp-smoke-test:test
+        - gradle -Dsmoketest.endpoint=$STAGING_SMOKE_TEST_ENDPOINT :webapp-smoke-test:test
     - stage: "promote to production"
       script:
-        - HEROKU_API_KEY="$HEROKU_API_KEY"
         - heroku pipelines:promote -a cmh-train-delays-staging
     - stage: "smoke test production deployment"
-      env:
-        - SMOKE_TEST_ENDPOINT="https://cmh-train-delays.herokuapp.com"
       script:
-        - gradle :webapp-smoke-test:test
+        - gradle -Dsmoketest.endpoint=$PRODUCTION_SMOKE_TEST_ENDPOINT :webapp-smoke-test:test
